--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.87.1",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.543.0",
